@@ -9,6 +9,7 @@ package com.evolveum.midpoint.schema.processor;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import javax.xml.namespace.QName;
@@ -75,9 +76,15 @@ public interface ResourceSchema extends PrismSchema, Cloneable, LayeredDefinitio
 
     /** Returns definitions for all types with given kind. (If null, returns all types.) */
     default @NotNull List<? extends ResourceObjectTypeDefinition> getObjectTypeDefinitions(@Nullable ShadowKindType kind) {
+        return getObjectTypeDefinitions(def -> def.matchesKind(kind));
+    }
+
+    /** Returns all matching object type definitions. */
+    default @NotNull List<ResourceObjectTypeDefinition> getObjectTypeDefinitions(
+            @NotNull Predicate<ResourceObjectTypeDefinition> predicate) {
         return getObjectTypeDefinitions().stream()
-                .filter(def -> def.matchesKind(kind))
-                .collect(Collectors.toList());
+                .filter(predicate)
+                .toList();
     }
 
     /** Returns definition of the given type. No hacks/guesses here. */
@@ -201,9 +208,15 @@ public interface ResourceSchema extends PrismSchema, Cloneable, LayeredDefinitio
      */
     default @NotNull ResourceObjectClassDefinition findObjectClassDefinitionRequired(@NotNull QName name)
             throws SchemaException {
+        return findObjectClassDefinitionRequired(name, () -> "");
+    }
+
+    default @NotNull ResourceObjectClassDefinition findObjectClassDefinitionRequired(
+            @NotNull QName name, @NotNull Supplier<String> contextSupplier)
+            throws SchemaException {
         return MiscUtil.requireNonNull(
                 findObjectClassDefinition(name),
-                () -> "Object class " + name + " not found in " + this);
+                () -> "Object class " + name + " not found in " + this + contextSupplier.get());
     }
 
     /**
